# SE104_QuanLyDKMHVaThuHocPhi

./: package-lock.json
backend/: .env  Cargo.toml
backend/migrations/: 20240512050104_databaseCreate.sql  20240515054716_decoyCreate.sql
backend/src/: chuong_trinh_hoc.csv  context.rs  error.rs  handler.rs  main.rs  mon_hoc.csv  mon_hoc_mo.csv  sinh_vien.csv
backend/src/handler/: chuong_trinh_hoc.rs  doi_tuong.rs  hoc_ky.rs  hoc_phi.rs  khoa.rs  mod.rs  mon_hoc.rs  nganh.rs  que_quan.rs  sinh_vien.rs  user.rs
backend/src/handler/chuong_trinh_hoc/: mod.rs
backend/src/handler/chuong_trinh_hoc/khoa/: mod.rs
backend/src/handler/chuong_trinh_hoc/nganh/: mod.rs
backend/src/handler/dkmh/: mod.rs
backend/src/handler/doi_tuong/: chinh_sach.rs  mod.rs  vung_mien.rs
backend/src/handler/doi_tuong/chinh_sach/: mod.rs
backend/src/handler/doi_tuong/options/: mod.rs
backend/src/handler/doi_tuong/vung_mien/: mod.rs
backend/src/handler/hoc_ky/: mod.rs
backend/src/handler/hoc_phi/: mod.rs
backend/src/handler/khoa/: mod.rs
backend/src/handler/mon_hoc/: mo.rs  mod.rs
backend/src/handler/mon_hoc_mo/: mod.rs
backend/src/handler/nganh/: mod.rs
backend/src/handler/params/: mod.rs
backend/src/handler/params/hoc_ky/: mod.rs
backend/src/handler/que_quan/: mod.rs
backend/src/handler/que_quan/thanh_pho/: mod.rs
backend/src/handler/que_quan/tinh/: mod.rs
backend/src/handler/session/: mod.rs
backend/src/handler/sinh_vien/: mod.rs
backend/src/handler/sinh_vien/all/: mod.rs
backend/src/handler/user/: mod.rs  session.rs
frontend/: package-lock.json  (+2 more)
(+105 files in other folders)
