[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.7.5"
dotenv = "0.15.0"
rand = "0.8.5"
serde = "1.0.201"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "time"] }
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
